--- a/basic/todo.html
+++ b/basic/todo.html
@@ -150,55 +150,44 @@
     <div class="input-group-prepend">
       <span class="input-group-text" id="basic-addon1">待辦事項</span>
     </div>
-    <input type="text" class="form-control" placeholder="準備要做的任務">
+    <input type="text" class="form-control" placeholder="準備要做的任務" v-model="newTodo" @keyup.enter="addTodo">
     <div class="input-group-append">
-      <button class="btn btn-primary" type="button">新增</button>
+      <button class="btn btn-primary" type="button" @click="addTodo">新增</button>
     </div>
   </div>
   <div class="card text-center">
     <div class="card-header">
       <ul class="nav nav-tabs card-header-tabs">
         <li class="nav-item">
-          <a class="nav-link active" href="#">全部</a>
+          <a class="nav-link" href="#" :class="{'active': visibility === 'all'}" @click="visibility = 'all' ">全部</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="#">進行中</a>
+          <a class="nav-link " href="#" :class="{'active': visibility === 'active'}" @click="visibility = 'active' ">進行中</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">已完成</a>
+          <a class="nav-link" href="#" :class="{'active': visibility === 'completed'}" @click="visibility = 'completed' ">已完成</a>
         </li>
       </ul>
     </div>
     <ul class="list-group list-group-flush text-left">
-      <li class="list-group-item">
-        <div class="d-flex">
+      <li class="list-group-item" v-for="(item, key) in filteredTodos" @dblclick="editTodo(item)">
+        <div class="d-flex" v-if="item.id !== cacheTodo.id">
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="a1">
-            <label class="form-check-label" for="a1">
-              Cras justo odio
+            <input type="checkbox" class="form-check-input" v-model="item.completed" :id="item.id">
+            <label class="form-check-label" :class="{'completed': item.completed}" :for="item.id">
+              {{ item.title }}
             </label>
           </div>
-          <button type="button" class="close ml-auto" aria-label="Close">
+          <button type="button" class="close ml-auto" aria-label="Close" @click="removeTodo(key)">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
+        <input type="text" class="form-control" v-if="item.id === cacheTodo.id" v-model="cacheTitle"
+           @keyup.esc="cancelEdit()" @keyup.enter="doneEdit(item)">
       </li>
-      <li class="list-group-item">
-        <div class="d-flex">
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="a1">
-            <label class="form-check-label completed" for="a1">
-              Cras justo odio
-            </label>
-          </div>
-          <button type="button" class="close ml-auto" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-      </li>
-      <li class="list-group-item">
+      <!-- <li class="list-group-item">
         <input type="text" class="form-control">
-      </li>
+      </li> -->
     </ul>
     <div class="card-footer d-flex justify-content-between">
       <span>還有 3 筆任務未完成</span>
@@ -210,7 +199,67 @@
 <script>
 var app = new Vue({
   el: '#app',
-  data: {},
+  data: {
+    newTodo: "",
+    todos: [{
+      id: "1",
+      title: "你好",
+      completed: false
+    }],
+    cacheTodo: {},
+    cacheTitle: '',
+    visibility: 'all'
+  },
+  methods: {
+      addTodo: function() {
+        var val = this.newTodo.trim();
+        var timestamp = Math.floor(Date.now());
+        if(!val)
+          return;
+        this.todos.push({
+          id: timestamp,
+          title: val,
+          completed: false 
+        });
+        this.newTodo = '';
+      },
+      removeTodo: function(key) {
+        this.todos.splice(key, 1);
+      },
+      editTodo: function(item) {
+        this.cacheTodo = item;
+        this.cacheTitle = item.title;
+      },
+      cancelEdit: function() {
+        this.cacheTodo = {};
+      },
+      doneEdit: function(item) {
+        item.title = this.cacheTitle;
+        this.cacheTitle = '';
+        this.cacheTodo = {};
+      }
+    },
+    computed: {
+      filteredTodos: function(item) {
+        if(this.visibility === 'all')
+          return this.todos;
+        else if(this.visibility === 'active') {
+          var newTodos = [];
+          this.todos.forEach(function(item) {
+            if(!item.completed)
+              newTodos.push(item);
+          })
+          return newTodos;
+        } else if(this.visibility === 'completed') {
+          var newTodos = [];
+          this.todos.forEach(function(item) {
+            if(item.completed)
+              newTodos.push(item);
+          })
+          return newTodos;
+        }
+      }
+    }
 });
 </script>
 
